# xml-to-json

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
tests/: test_xml_to_json.py
xml_to_json/: __init__.py  core.py
